Fix layout issues

--- a/webapp/src/style.css
+++ b/webapp/src/style.css
@@ -16,10 +16,11 @@
   -webkit-text-size-adjust: 100%;
 }
 
-
 body {
   margin: 0;
-  min-height: 100vh;
+  /* height: 100vh; */
+  /* height: var(--tg-viewport-stable-height); */
+  /* overflow: hidden; */
 }
 
 p {
